[package]
name = "bloss-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
openpgp-card = "0.3.4"
openpgp-card-pcsc = "0.3.0"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
