[package]
name = "pcsc-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
openpgp-card = "0.3.4"
openpgp-card-pcsc = "0.3.0"
pinentry = "0.3.0"
secrecy = "0.7.0"
serde = "1.0.156"
serde_json = "1.0.94"
sha1 = "0.10.5"
solana-sdk = "1.15.2"
thiserror = "1.0.39"
uriparse = "0.6.4"
